s/account/agent_id/ and s/inventory/container_id/g
