# docs/swagger.json
@@ -24,7 +24,7 @@
     "unpackItemParameters": {
       "type": "object",
       "properties": {
-        "inventory": {
+        "container_id": {
           "description": "the uuid of the container to unpack the item in",
           "$ref": "#/definitions/uuid"
         },
@@ -38,7 +38,7 @@
           "default": "default"
         }
       },
-      "required": [ "inventory", "blueprint", "slice" ]
+      "required": [ "container_id", "blueprint", "slice" ]
     
     },
     "shootingParameters": {
@@ -59,7 +59,7 @@
       "type": "object",
       "properties": {
         "from_id": {
-          "description": "the uuid of the inventory to transfer from",
+          "description": "the uuid of the container to transfer from",
           "$ref": "#/definitions/uuid"
         },
         "from_slice": {
@@ -68,7 +68,7 @@
           "default": "default"
         },
         "to_id": {
-          "description": "the uuid of the inventory to transfer to",
+          "description": "the uuid of the container to transfer to",
           "$ref": "#/definitions/uuid"
         },
         "to_slice": {
@@ -105,7 +105,7 @@
       "type": "object",
       "properties": {
         "container_id": {
-          "description": "the uuid of the inventory to deploy from",
+          "description": "the uuid of the container to deploy from",
           "$ref": "#/definitions/uuid"
         },
         "slice": {
@@ -757,10 +757,10 @@
         }
       }
     },
-    "/commands/resetAccount": {
+    "/commands/resetAgent": {
       "post": {
         "tags": [ "spaceObjects" ],
-        "description": "If you've played with stuff before, you may want to reset your account to wipe it clean. This will delete any ships, structures, inventories, etc in the game universe on your account.",
+        "description": "If you've played with stuff before, you may want to reset your agent's game state to wipe it clean. This will delete any ships, structures, inventories, etc in the game universe for this agent.",
         "parameters": [],
         "responses": {
           "default": { "$ref": "#/responses/Error" },
@@ -786,7 +786,7 @@
         "parameters": [
           {
             "name": "uuid",
-            "description": "the uuid of the inventory you want",
+            "description": "the uuid of the container you want",
             "in": "path",
             "required": true,
             "type": "string",
@@ -798,7 +798,7 @@
           "304": { "$ref": "#/responses/Empty" },
           "404": { "$ref": "#/responses/NotFound" },
           "200": {
-            "description": "A specific inventory",
+            "description": "A specific container",
             "schema": {
               "type": "object"
             }
